WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151683
Modern IDB: ObjectStore cursors should not be able to iterate out of their range
https://bugs.webkit.org/show_bug.cgi?id=151683
Summary
Modern IDB: ObjectStore cursors should not be able to iterate out of their range
Brady Eidson
Reported
2015-11-30 16:44:54 PST
Modern IDB: ObjectStore cursors should not be able to iterate out of their range
Attachments
Patch v1
(3.37 KB, patch)
2015-11-30 16:46 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-11-30 16:46:22 PST
Created
attachment 266301
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-11-30 18:16:00 PST
Comment on
attachment 266301
[details]
Patch v1 Clearing flags on attachment: 266301 Committed
r192850
: <
http://trac.webkit.org/changeset/192850
>
WebKit Commit Bot
Comment 3
2015-11-30 18:16:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug