Modern IDB: ObjectStore cursors should not be able to iterate out of their range. https://bugs.webkit.org/show_bug.cgi?id=151683

Reviewed by Darin Adler.

Source/WebCore:

No new tests (Covered by at least one failing test that now passes).

* Modules/indexeddb/server/MemoryObjectStoreCursor.cpp:
(WebCore::IDBServer::MemoryObjectStoreCursor::incrementForwardIterator):
(WebCore::IDBServer::MemoryObjectStoreCursor::incrementReverseIterator):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/169807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192850 268f45cc-cd09-0410-ab3c-d52691b4dbfc